# neo-mcp

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  NPM_DAEMON_PLAN.md  PARITY_FIXES.md  PUBLISH-STEPS.md  PUBLISHING.md  README.md  SETUP.md  fly.toml  pyproject.toml  railway.toml  render.yaml  server.py  smithery.yaml  test_connection.py
.github/workflows/: daemon-ci.yml  publish-mcp.yml  publish-npm.yml  publish-pypi.yml  publish-registry.yml
.mcp/: server.json
deploy/: .env.example  deploy.sh  docker-compose.yml  setup.sh
docs/: CHANGES.md  CLIENTS.md  CONNECTORS.md  CONNECTOR_PLAN.md  GUIDE.md  INSTALL.md  INTEGRATIONS.md  PHASE1_PROGRESS.md  PHASE2_PROGRESS.md  SETUP.md  USAGE.md  VPS_GUIDE.md  WEB_CONNECTOR.md  mcp.md  parity-self-tests.md  pip.md
docs/nextra/: integrations.mdx  slash-commands.mdx
docs/postman/: POSTMAN.md
docs/superpowers/specs/: 2026-05-07-deployment-id-and-logging-parity-design.md
mcpb/: .mcpbignore  build.sh  manifest.json
neo-agent/: Makefile  README.md  go.mod  main.go
neo-agent/config/: config.go
neo-agent/executor/: executor.go
neo-agent/mcp/: handler.go
neo-agent/poller/: http.go  poller.go
neo-agent/singleton/: singleton.go  singleton_unix.go  singleton_windows.go
neo-agent/workspace/: workspace.go
npm/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
npm/scripts/: postinstall.js
npm/skills/: neo.md
npm/src/: auth.ts  byok.ts  config.ts  daemon.ts  executor.ts  index.ts  logger.ts  mcp-server.ts  neo-client.ts  paths.ts  postman-capabilities.ts
npm/tests/: auth.test.ts  daemon.test.ts  executor.test.ts  setup-env.ts  system.test.ts
python/: DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  requirements.txt
python/scripts/: start-daemon.sh
python/src/neo_mcp/: __main__.py  action_handlers.py  auth.py  backend_client.py  backend_poller.py  config.py  daemon.py  job_manager.py  log_utils.py  login.py  oauth.py  paths.py  postman_capabilities.py  server.py  service.py  setup.py  system_info.py
python/src/neo_mcp/byok/: __init__.py  credentials_tester.py  model_fetcher.py  profile_manager.py  types.py
python/src/neo_mcp/integrations/: __init__.py  _fsutil.py  manager.py  registry.py  secret_store.py
python/src/neo_mcp/integrations/providers/: __init__.py  _http.py  anthropic.py  github.py  huggingface.py  kaggle.py  openai.py  openrouter.py  s3.py  wandb.py
python/src/neo_mcp/postman/: __init__.py  env.md  overview.md  prompts.md  tools.md  workflow.md
python/tests/: conftest.py  test_auth.py  test_cli_ux.py  test_concurrent_workspaces.py  test_connection.py  test_e2e.py  test_postman_capabilities.py  test_server.py  test_setup.py  test_system.py
skills/: README.md
skills/claude-code/: SKILL.md
skills/langchain/: SKILL.md
skills/neo/: SKILL.md
skills/neo-setup/: SKILL.md
skills/openai-agents/: SKILL.md
skills/vercel/: SKILL.md
src/neo_mcp/: daemon.py  oauth.py  server.py  setup.py
tests/: test_connection.py  test_server.py
