[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-mcp"
version = "0.1.0"
description = "MCP server for the Neo AI backend"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
neo-mcp = "neo_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
