[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-mcp"
version = "0.4.15"
description = "MCP server for the Neo AI/ML backend — submit tasks, poll status, read output"
readme = {text = "MCP server for the Neo AI/ML backend — submit tasks, poll status, read output.", content-type = "text/plain"}
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "ai", "ml", "neo", "llm", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://heyneo.so"
Repository = "https://github.com/NeoResearchAI/MCPServer"
Documentation = "https://github.com/NeoResearchAI/MCPServer/blob/main/docs/CLIENTS.md"
"Bug Tracker" = "https://github.com/NeoResearchAI/MCPServer/issues"

[project.scripts]
neo-mcp = "neo_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
