[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-mcp"
version = "0.5.4"
description = "MCP server for the Neo AI/ML platform — submit tasks, monitor execution, retrieve outputs, and access AI engineering workflows."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

keywords = [
"mcp",
"model-context-protocol",
"ai",
"machine-learning",
"llm",
"agents",
"neo"
]

classifiers = [
"Development Status :: 4 - Beta",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Topic :: Scientific/Engineering :: Artificial Intelligence",
"Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
"mcp>=1.26.0",
"httpx>=0.27.0",
"anyio>=4.0.0"
]

[project.optional-dependencies]
dev = [
"pytest>=7.0",
"keyring>=24.0"
]

keyring = [
"keyring>=24.0"
]

[project.urls]
Homepage = "https://heyneo.com"
Repository = "https://github.com/NeoAIResearch/neo-mcp"
Documentation = "https://github.com/NeoAIResearch/neo-mcp"
"Issue Tracker" = "https://github.com/NeoAIResearch/neo-mcp/issues"

[project.scripts]
neo-mcp = "neo_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neo_mcp = ["skills/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
