[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-mcp"
version = "0.5.5"
description = "Neo MCP server — bring Neo, the autonomous AI engineer for ML, LLM, GenAI & data workflows, into Claude Code, Cursor, Codex & other editors. Describe a task; Neo builds it and writes results to your repo."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = [
    "mcp", "model-context-protocol", "mcp-server", "neo",
    "claude-code", "cursor", "codex", "windsurf",
    "ai", "ml", "machine-learning", "deep-learning", "data-science",
    "llm", "generative-ai", "rag", "ai-agent", "fine-tuning",
    "computer-vision", "pytorch", "huggingface", "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "keyring>=24.0",
]
keyring = [
    "keyring>=24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://heyneo.com"
Repository = "https://github.com/NeoAIResearch/neo-mcp"
Documentation = "https://docs.heyneo.com/neo-mcp"
"Bug Tracker" = "https://github.com/NeoAIResearch/neo-mcp/issues"

[project.scripts]
neo-mcp = "neo_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neo_mcp = ["skills/*.md"]
